...
    "Démarrer" : {

    },
    "Démarrer une balade" : {

    },
    "Dernière balade d'Oslo" : {

    },
    "Des personnes de votre zone proposent des promenades à une date et un lieu précis. Vous demandez à venir, l'organisateur répond." : {

    },
    "Des sorties près de chez vous" : {
...
    "Écrit par vous" : {

    },
    "Effacer le journal et les profils de cet appareil ?" : {

    },
    "Effacer toutes les données" : {

    },
    "En laisse, chiens sociables" : {

    },
    "En pause : rien ne s'affiche sur Aujourd'hui." : {
...
    "Supprimer ce profil ?" : {

    },
    "Supprimer cette balade ?" : {

    },
    "Supprimer définitivement" : {

    },
    "Supprimer la balade" : {

    },
    "Supprimer la routine" : {
...
    "Tous les chiens" : {

    },
    "Tout afficher" : {

    },
    "Tout effacer" : {

    },
    "Toutes les races" : {

    },
    "Trufflo Design System" : {
...
